# JniBsdiff

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/jnibsdiff/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/jnibsdiff/: AppGlobal.kt  BsPatcher.kt  MainActivity.kt
app/src/main/java/com/example/jnibsdiff/loader/: DataLoader.kt  LoaderCallback.kt
app/src/main/java/com/example/jnibsdiff/utils/: OLog.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/jnibsdiff/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
